<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activities.ui.activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        tools:ignore="NewApi">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_an_account"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_first_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_second_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/second_name"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_id"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">
       <CheckBox
           android:id="@+id/register_term_checkbox"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/i_agree_to_the"
           android:textColor="@color/white"
           android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/terms_condition"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>
    </LinearLayout>

        <Button
            android:id="@+id/redgister_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_background"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/already_have_an_account"/>
            <TextView
                android:id="@+id/register_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textStyle="bold"/>
        </LinearLayout>
</LinearLayout>