<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.activities.ForgetPasswordActivity"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/forget_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="top">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="hi there"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_image_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/neon_light_tube_black_backdrop" />

        <ImageView
            android:layout_width="@dimen/logo_width_size"
            android:layout_height="@dimen/logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/neon_open" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/reset_password_inform"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/forget_password_mail_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:background="#F1ECEC"
        android:gravity="center"
        android:hint="@string/mail_et"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/forget_password_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_mail_et"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>