<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.ui.activities.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/product_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/product_details_toolbar_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/toolbar_title_paddingStart"
            android:text="@string/title_product_details"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_details_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_image_height"
                android:background="#9D9898" />

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:orientation="vertical"
                android:padding="@dimen/product_details_title_price_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title"
                android:textSize="12sp"
                android:textColor="@color/colorLightGrey"/>
                <EditText
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/product_details_title_textSize"
                    android:textStyle="bold"
                    tools:text="Product Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_price"
                    android:textSize="12sp"
                    android:textColor="@color/colorLightGrey"/>
                <EditText
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Price"
                    android:textColor="@color/white"
                    android:textSize="@dimen/product_details_title_textSize"
                    android:textStyle="bold"
                    tools:text="$100" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:enabled="false"
                android:text="@string/lbl_product_description"
                android:textColor="@color/white"
                android:textSize="@dimen/product_details_label_textSize" />

            <EditText
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:enabled="false"
                android:hint="Price"
                android:textColor="@color/white"
                android:textSize="@dimen/product_details_title_textSize"
                android:textStyle="bold"
                tools:text="$100" />


            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_product_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:enabled="false"
                    android:text="@string/lbl_product_details_stock_quantity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/product_details_label_textSize" />

                <EditText
                    android:id="@+id/tv_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:enabled="false"
                    android:inputType="number"
                    android:paddingStart="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/white"
                    android:textSize="@dimen/product_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    tools:text="5" />
            </LinearLayout>

            <Button
                android:id="@+id/product_details_save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/btn_lbl_save"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone" />
            <Button
                android:id="@+id/product_details_add_to_cart_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/albl_btn_add_to_cart"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone" />
            <Button
                android:id="@+id/product_details_go_to_cart_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/btn_lbl_go_to_cart"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/go_to_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />
</androidx.constraintlayout.widget.ConstraintLayout>